Fixed spacing and implemented dropdown fully. Will add routing next.

--- a/apps/frontend/src/styling/HamburgerMenu.css
+++ b/apps/frontend/src/styling/HamburgerMenu.css
@@ -4,13 +4,15 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  width: calc(calc(100vw - 210px) / 7);
+  width: calc(100vw / 9); /* Corrected width calculation */
   height: 110px;
+  box-sizing: border-box; /* Include padding and border in width and height */
+  margin: 0; /* Remove any default margin */
 }
 
 .hamburger-icon {
   font-family: Arial, sans-serif;
-  font-size: 500%;
+  font-size: 300%;
   font-weight: bold;
   background-color: #042c5c;
   color: #ffffff;
@@ -21,20 +23,22 @@
   top: 95%; /* Positioned right at the bottom of the hamburger menu */
   left: 0;
   background-color: #042c5c;
-  width: calc(
-    calc(100vw - 210px) / 7
-  ); /* Match the width of the hamburger-menu container */
+  width: calc(100vw / 9); /* Match the width of the hamburger-menu container */
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
 .menu-item {
-  padding: 12px 16px;
-  text-decoration: none;
+  padding: 10px;
+  font-family: Arial, sans-serif;
+  font-size: 180%;
+  text-align: center;
+
   display: block;
   color: #ffffff;
 }
 
 .menu-item:hover {
   background-color: #032043;
+  font-weight: bold;
 }
